config/monitoring/prometheus/base/prometheus-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-tls
    prometheus.io/scheme: https
    prometheus.io/scrape: 'true'
  labels:
    app: prometheus
  name: data-science-prometheus
  namespace: redhat-ods-monitoring
spec:
  ports:
  - name: https
    port: 9091
    targetPort: https
  selector:
    deployment: prometheus
  sessionAffinity: None
  type: ClusterIP
