config/monitoring/prometheus/base/prometheus-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  labels:
    app: prometheus
  name: data-science-prometheus
  namespace: redhat-ods-monitoring
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: data-science-prometheus
  wildcardPolicy: None
